# rag-workbench

./: .gitignore  README.md  TESTING_1.md  pyproject.toml
data/: generate_tests.py
docs/: benchmark-generation.md  findings.md  methodology.md  phase_2_embedding_progression.md  rag-optimization-techniques.md  report-template.md
notebooks/: phase2_exploration.ipynb  phase4_exploration.ipynb
phase3_baseline/: app.py  evaluator.py
phase3_baseline/implementation/: answer.py  evaluate.py  ingest.py
phase5_optimized/: app.py  evaluator.py
phase5_optimized/implementation/: answer.py  evaluate.py  ingest.py
